# checker_player

./: README.md  board.py  main.py  pyproject.toml
src/checker_player/: board.py  game.py  main.py  piece.py  player.py  square.py  ui.py
