[tool.poetry]
name = "checker-player"
version = "0.1.0"
description = "A checker game to play against an AI"
authors = ["ChronoBoot <cyprien_g@chronoboot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
